--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -53,6 +53,12 @@
       "label": "Enable transparent header on product page"
     },
     {
+      "type": "checkbox",
+      "id": "enable_transparent_header_collection",
+      "default": true,
+      "label": "Enable transparent header on collection page"
+    },
+    {
       "type": "color_scheme",
       "id": "color_scheme",
       "label": "t:sections.all.colors.label",
@@ -73,8 +79,8 @@
 {%- liquid
   assign sticky_header_type = section.settings.sticky_header_type
 
-  # Disable sticky header on product pages
-  if template.name == 'product'
+  # Disable sticky header on product and collection pages
+  if template.name == 'product' or template.name == 'collection'
     assign sticky_header_type = 'none'
   endif
 
@@ -82,6 +88,8 @@
   if template.name == 'index' and section.settings.enable_transparent_header
     assign transparent_header = true
   elsif template.name == 'product' and section.settings.enable_transparent_header_product
+    assign transparent_header = true
+  elsif template.name == 'collection' and section.settings.enable_transparent_header_collection
     assign transparent_header = true
   endif
 
@@ -321,6 +329,7 @@
 <header
   class="header-custom header-wrapper {% if transparent_header %}is-transparent{% endif %}"
   data-sticky-type="{{ sticky_header_type }}"
+  data-template-name="{{ template.name }}"
   id="site-header"
 >
   <div class="header-inner">
