--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -32,22 +32,15 @@
       assign fetch_priority = 'high'
     endif
     assign focal_point_style = '--focal-point: ' | append: media.presentation.focal_point | append: ';'
+
+    assign image_html = media.preview_image | image_url: width: 3840 | image_tag: widths: widths, alt: media.alt, sizes: sizes, loading: loading, class: 'product-media__image', transitionToProduct: settings.transition_to_main_product, data_max_resolution: high_res_url, fetchpriority: fetch_priority, style: focal_point_style, data-parallax: true
+
+    if preview_image_only
+      echo image_html | replace: 'data-parallax="true"', 'data-card-parallax="true"'
+    else
+      echo image_html
+    endif
   %}
-  {{
-    media.preview_image
-    | image_url: width: 3840
-    | image_tag:
-      widths: widths,
-      alt: media.alt,
-      sizes: sizes,
-      loading: loading,
-      class: 'product-media__image',
-      transitionToProduct: settings.transition_to_main_product,
-      data_max_resolution: high_res_url,
-      fetchpriority: fetch_priority,
-      style: focal_point_style,
-      data-parallax: true
-  }}
 
   {% unless preview_image_only %}
     {%- case media.media_type -%}
