Add default values for menu font settings and refactor accordion drawer handling

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -181,7 +181,7 @@
   }
 
   /* Hide default details summary from header-drawer */
-  .header-left header-drawer summary {
+  .header-left header-drawer > details > summary {
     display: none !important;
   }
 
