--- a/snippets/menu-font-styles.liquid
+++ b/snippets/menu-font-styles.liquid
@@ -5,13 +5,16 @@
      menu_type {string}: 'drawer' or 'mega_menu'
 {%- endcomment -%}
 
---menu-top-level-font-family: var(--font-{{ settings.type_font_primary_link }}--family);
---menu-top-level-font-size-desktop: {{ settings.type_font_primary_size }}; --menu-top-level-font-style: var(--font-
-{{- settings.type_font_primary_link -}}
+{%- liquid
+  assign font_link = settings.type_font_primary_link | default: 'body'
+%}
+--menu-top-level-font-family: var(--font-{{ font_link }}--family); --menu-top-level-font-size-desktop:
+{{ settings.type_font_primary_size }}; --menu-top-level-font-style: var(--font-
+{{- font_link -}}
 --style); --menu-top-level-font-weight: var(--font-
-{{- settings.type_font_primary_link -}}
+{{- font_link -}}
 --weight); --menu-top-level-font-case:
-{%- if settings.type_case_primary_link == 'uppercase' %}uppercase{% else %}none{% endif -%}
+{% if settings.type_case_primary_link == 'uppercase' %}uppercase{% else %}none{% endif -%}
 ;
 {% if menu_type == 'drawer' %}
   --menu-top-level-font-size: var(--menu-font-2xl--size); --menu-top-level-font-line-height:
