--- a/snippets/submenu-font-styles.liquid
+++ b/snippets/submenu-font-styles.liquid
@@ -4,14 +4,17 @@
      settings: {block.settings}
 {%- endcomment -%}
 
---menu-parent-font-family: var(--font-{{ settings.type_font_primary_link }}--family); --menu-parent-font-style:
-var(--font-
-{{- settings.type_font_primary_link -}}
+{%- liquid
+  assign font_link = settings.type_font_primary_link | default: 'body'
+  assign font_style = settings.menu_font_style | default: 'regular'
+%}
+--menu-parent-font-family: var(--font-{{ font_link }}--family); --menu-parent-font-style: var(--font-
+{{- font_link -}}
 --style); --menu-parent-font-weight: var(--font-
-{{- settings.type_font_primary_link -}}
+{{- font_link -}}
 --weight); --menu-parent-font-case:
 {% if settings.type_case_primary_link == 'uppercase' %}uppercase{% else %}none{% endif %};
-{% case settings.menu_font_style %}
+{% case font_style %}
   {% when 'regular' %}
     --menu-parent-font-size: var(--menu-font-md--size); --menu-parent-font-line-height:
     var(--menu-font-md--line-height); --menu-parent-font-color: var(--color-foreground);
@@ -25,14 +28,13 @@ var(--font-
     var(--menu-font-sm--line-height); --menu-parent-font-color: rgb(var(--color-foreground-rgb) /
     var(--opacity-subdued-text)); --menu-parent-active-font-color: var(--color-foreground);
 {% endcase %}
---menu-child-font-family: var(--font-{{ settings.type_font_primary_link }}--family); --menu-child-font-style:
-var(--font-
-{{- settings.type_font_primary_link -}}
+--menu-child-font-family: var(--font-{{ font_link }}--family); --menu-child-font-style: var(--font-
+{{- font_link -}}
 --style); --menu-child-font-weight: var(--font-
-{{- settings.type_font_primary_link -}}
+{{- font_link -}}
 --weight); --menu-child-font-case:
 {% if settings.type_case_primary_link == 'uppercase' %}uppercase{% else %}none{% endif %};
-{% case settings.menu_font_style %}
+{% case font_style %}
   {% when 'regular' %}
     --menu-child-font-size: var(--menu-font-sm--size); --menu-child-font-line-height: var(--menu-font-sm--line-height);
     --menu-child-font-color: rgb(var(--color-foreground-rgb) / var(--opacity-subdued-text));
