--- a/snippets/header-drawer.liquid
+++ b/snippets/header-drawer.liquid
@@ -97,7 +97,7 @@
         class="menu-drawer__navigation"
         style="
           {%- render 'menu-font-styles', settings: block_settings, menu_type: 'drawer' %}
-          {%- render 'submenu-font-styles', settings: block_settings %}
+          {%- render 'submenu-font-styles', settings: block_settings, menu_type: 'drawer' %}
         "
       >
         <ul
