--- a/snippets/menu-font-styles.liquid
+++ b/snippets/menu-font-styles.liquid
@@ -7,6 +7,9 @@
 
 {%- liquid
   assign font_link = settings.type_font_primary_link | default: 'body'
+  if menu_type == 'drawer'
+    assign font_link = 'body'
+  endif
 %}
 --menu-top-level-font-family: var(--font-{{ font_link }}--family); --menu-top-level-font-size-desktop:
 {{ settings.type_font_primary_size }}; --menu-top-level-font-style: var(--font-
@@ -14,11 +17,17 @@
 --style); --menu-top-level-font-weight: var(--font-
 {{- font_link -}}
 --weight); --menu-top-level-font-case:
-{% if settings.type_case_primary_link == 'uppercase' %}uppercase{% else %}none{% endif -%}
+{% if menu_type == 'drawer' %}
+  {{ settings.product_title_case | default: 'none' }}
+{% elsif settings.type_case_primary_link == 'uppercase' -%}
+  uppercase
+{%- else -%}
+  none
+{%- endif -%}
 ;
 {% if menu_type == 'drawer' %}
-  --menu-top-level-font-size: var(--menu-font-2xl--size); --menu-top-level-font-line-height:
-  var(--menu-font-2xl--line-height);
+  --menu-top-level-font-size: var(--menu-font-md--size); --menu-top-level-font-line-height:
+  var(--menu-font-md--line-height);
 {% else %}
   --menu-top-level-font-size: var(--menu-font-sm--size); --menu-top-level-font-line-height:
   var(--menu-font-sm--line-height);
