--- a/snippets/collection-card.liquid
+++ b/snippets/collection-card.liquid
@@ -38,6 +38,7 @@
 <div
   class="
     collection-card
+    product-card
     border-style
     {% if block_settings.placement == 'on_image' %}collection-card--image-bg{% endif %}
     {% if section.settings.layout_type == 'bento' %}collection-card--image-height-fixed{% endif %}
@@ -67,7 +68,7 @@
   </a>
   <div class="collection-card__inner">
     {{ card_image }}
-    <div class="collection-card__content layout-panel-flex--column">
+    <div class="collection-card__content product-card__content layout-panel-flex--column">
       {{ children }}
     </div>
   </div>
