--- a/sections/main-collection-list.liquid
+++ b/sections/main-collection-list.liquid
@@ -1,5 +1,3 @@
-
-
 {% liquid
   assign section_collections = collections
   assign max_items = 20
@@ -22,6 +20,7 @@
   "
 >
   <div class="section-resource-list__content">
+    {% render 'collection-hero', title: 'Collections', settings: section.settings %}
     {%- content_for 'blocks' -%}
   </div>
 
