--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -79,8 +79,8 @@
 {%- liquid
   assign sticky_header_type = section.settings.sticky_header_type
 
-  # Disable sticky header on product, collection, and list-collections pages
-  if template.name == 'product' or template.name == 'collection' or template.name == 'list-collections'
+  # Disable sticky header on product, collection, list-collections, and cart pages
+  if template.name == 'product' or template.name == 'collection' or template.name == 'list-collections' or template.name == 'cart'
     assign sticky_header_type = 'none'
   endif
 
@@ -92,6 +92,8 @@
   elsif template.name == 'collection' and section.settings.enable_transparent_header_collection
     assign transparent_header = true
   elsif template.name == 'list-collections' and section.settings.enable_transparent_header_collection
+    assign transparent_header = true
+  elsif template.name == 'cart'
     assign transparent_header = true
   elsif template.name == 'page' and template.suffix == 'about-us'
     assign transparent_header = true
