--- a/snippets/cart-products.liquid
+++ b/snippets/cart-products.liquid
@@ -477,7 +477,7 @@
   }
 
   .cart-items__details * {
-    font-size: var(--font-size--sm);
+    font-size: var(--font-size--product_info);
   }
 
   .cart-items__details a {
@@ -485,7 +485,7 @@
   }
 
   .cart-items__title {
-    font-size: var(--font-size--md);
+    font-size: var(--font-size--product_info);
     color: var(--color-foreground);
     text-transform: var(--product-title-case);
   }
@@ -543,7 +543,7 @@
     min-width: var(--cart-item-price-width);
     text-align: end;
     display: block;
-    font-size: var(--font-size--sm);
+    font-size: var(--font-size--product_info);
   }
 
   .cart-items__price-unit {
